--- a/app/src/main/res/layout/activity_making_video.xml
+++ b/app/src/main/res/layout/activity_making_video.xml
@@ -4,20 +4,20 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.constraint.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <com.app.hulchul.utils.PortraitFrameLayout
             android:id="@+id/wrap_view"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </android.support.constraint.ConstraintLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+             />
+    </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <RelativeLayout
         android:id="@+id/layout_close"
         android:layout_width="wrap_content"
@@ -183,4 +183,29 @@
             />
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/layout_filterslist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentBottom="true"
+        >
+
+        <ImageView
+            android:id="@+id/iv_closefilters"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@mipmap/close_transparent"
+            android:layout_alignParentRight="true"
+            android:layout_margin="10dp"
+            />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:src="@drawable/ic_launcher_background"
+            />
+    </RelativeLayout>
+    </RelativeLayout>
 </RelativeLayout>
