--- a/app/src/main/res/layout/fragment_me_.xml
+++ b/app/src/main/res/layout/fragment_me_.xml
@@ -62,7 +62,9 @@
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/layout_titlebar">
+            android:layout_below="@+id/layout_titlebar"
+            android:focusable="true"
+            android:focusableInTouchMode="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
