--- a/app/src/main/res/layout/fragment_discover_fragment.xml
+++ b/app/src/main/res/layout/fragment_discover_fragment.xml
@@ -61,19 +61,12 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.widget.NestedScrollView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/white"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/rv_hashtagscontainer"
-            android:layout_margin="10dp"
-            />
-
-    </android.support.v4.widget.NestedScrollView>
+        android:id="@+id/rv_hashtagslistcontainer"
+        android:layout_margin="10dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        />
 
 </android.support.design.widget.CoordinatorLayout>
