--- a/app/src/main/res/layout/view_holder_exoplayer_basic.xml
+++ b/app/src/main/res/layout/view_holder_exoplayer_basic.xml
@@ -5,7 +5,6 @@
     android:id="@+id/card"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardBackgroundColor="@color/cardview_light_background"
     >
 
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
@@ -16,6 +15,13 @@
         app:surface_type="texture_view"
         app:use_controller="false"
         />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/home_screenbg">
+
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/iv_pauseresume"
@@ -279,10 +285,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:orientation="horizontal"
-            android:paddingBottom="10dp"
             android:weightSum="2"
             android:paddingTop="10dp"
-            android:background="@android:drawable/screen_background_dark_transparent">
+            >
 
             <LinearLayout
                 android:layout_width="0dp"
