--- a/app/src/main/res/layout/activity_my_sounds.xml
+++ b/app/src/main/res/layout/activity_my_sounds.xml
@@ -33,4 +33,19 @@
             android:textAppearance="?android:attr/textAppearanceMedium"/>
     </RelativeLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title_layout">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_mysounds"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp">
+
+        </android.support.v7.widget.RecyclerView>
+
+    </RelativeLayout>
+
 </RelativeLayout>
