--- a/app/src/main/res/layout/filters_model.xml
+++ b/app/src/main/res/layout/filters_model.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="100dp"
+    android:layout_height="120dp"
+    android:id="@+id/layout_filtercontainer"
+    android:layout_margin="2dp"
     >
 
     <RelativeLayout
-        android:id="@+id/layout_filtercontainer"
-        android:layout_width="100dp"
-        android:layout_height="120dp"
-        android:layout_margin="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="2dp"
         >
 
         <RelativeLayout
@@ -24,4 +25,4 @@
         </RelativeLayout>
 
     </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
