--- a/app/src/main/res/layout/activity_making_video.xml
+++ b/app/src/main/res/layout/activity_making_video.xml
@@ -14,7 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-             />
+            >
+        </com.app.hulchul.utils.PortraitFrameLayout>
     </RelativeLayout>
 
     <RelativeLayout
