--- a/app/src/main/res/layout/videosgrid_model.xml
+++ b/app/src/main/res/layout/videosgrid_model.xml
@@ -15,7 +15,8 @@
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
-           android:layout_centerInParent="true"/>
+           android:layout_centerInParent="true"
+           android:scaleType="fitXY"/>
        
        <ImageView
            android:layout_width="20dp"
