--- a/app/src/main/res/layout/fragment_images.xml
+++ b/app/src/main/res/layout/fragment_images.xml
@@ -9,7 +9,8 @@
         android:id="@+id/rv_imageslist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
+        android:layout_margin="5dp"
+        >
 
     </android.support.v7.widget.RecyclerView>
 
