--- a/app/src/main/res/layout/activity_changepassword.xml
+++ b/app/src/main/res/layout/activity_changepassword.xml
@@ -47,7 +47,7 @@
             android:layout_height="20dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/old_password"/>
 
         <EditText
             android:layout_width="match_parent"
@@ -83,7 +83,7 @@
             android:layout_height="20dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/new_password"/>
 
         <EditText
             android:layout_width="match_parent"
@@ -119,7 +119,7 @@
             android:layout_height="20dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@mipmap/confirm_password"/>
 
         <EditText
             android:layout_width="match_parent"
