--- a/app/src/main/res/layout/comments_model.xml
+++ b/app/src/main/res/layout/comments_model.xml
@@ -24,10 +24,11 @@
 
        <ImageView
            android:id="@+id/iv_reply"
-           android:layout_width="40dp"
-           android:layout_height="40dp"
-           android:src="@mipmap/ic_launcher"
+           android:layout_width="30dp"
+           android:layout_height="30dp"
+           android:src="@mipmap/reply"
            android:padding="10dp"
+           android:background="@drawable/circle_bgdarktransparent"
            />
    </RelativeLayout>
 
