--- a/app/src/main/res/layout/fragment_notification_fragment.xml
+++ b/app/src/main/res/layout/fragment_notification_fragment.xml
@@ -10,11 +10,34 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="60dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="Notification Screen"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:background="@color/colorPrimary"
+            android:id="@+id/layout_title">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Notifications"
+                android:textColor="@android:color/white"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_margin="15dp"/>
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/layout_title"
+            android:layout_margin="5dp">
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/rv_notifications">
+
+            </android.support.v7.widget.RecyclerView>
+
+        </RelativeLayout>
     </RelativeLayout>
 </RelativeLayout>
