--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -46,7 +46,8 @@
             android:id="@+id/rv_totalcomments"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp">
+            android:layout_margin="5dp"
+            android:layout_alignParentBottom="true">
 
         </android.support.v7.widget.RecyclerView>
 
