--- a/app/src/main/res/layout/view_holder_exoplayer_basic.xml
+++ b/app/src/main/res/layout/view_holder_exoplayer_basic.xml
@@ -99,7 +99,7 @@
                             android:layout_height="wrap_content"
                             android:textAppearance="?android:attr/textAppearanceSmall"
                             android:textColor="@android:color/white"
-                            android:text="22k"
+                            android:text="0"
                             android:textSize="12sp"
                             android:layout_marginLeft="5dp"
                             android:layout_centerVertical="true"
@@ -162,7 +162,7 @@
                     android:id="@+id/tv_likescount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="2.1k"
+                    android:text="0"
                     android:textColor="@android:color/white"
                     android:layout_gravity="center"
                     android:textSize="12sp"/>
@@ -182,7 +182,7 @@
                     android:id="@+id/tv_commentscount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="6.1k"
+                    android:text="0"
                     android:layout_gravity="center"
                     android:textColor="@android:color/white"
                     android:textSize="12sp"/>
@@ -201,7 +201,7 @@
                     android:id="@+id/tv_sharescount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="25k"
+                    android:text="0"
                     android:layout_gravity="center"
                     android:textColor="@android:color/white"
                     android:textSize="12sp"
