--- a/app/src/main/res/layout/activity_abuse_selection.xml
+++ b/app/src/main/res/layout/activity_abuse_selection.xml
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="rating label"
+            android:text="Give your rating"
             android:textSize="20sp"
             android:textColor="@color/colorPrimary"
             android:layout_gravity="center"
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:numStars="5"
-            android:rating="3"
+            android:rating="0"
             android:max="5"
             android:layout_margin="8dp"
             />
